feat: implemented custom texts
